@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-08T16:21:04Z",
-  "count_outdated" : 107,
-  "uniques_outdated" : 71,
+  "timestamp" : "2022-07-15T08:17:47Z",
+  "count_outdated" : 108,
+  "uniques_outdated" : 72,
   "count" : 109,
   "uniques" : 73,
   "clones" : [
-    {
-      "timestamp": "2022-07-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-08T00:00:00Z",
       "count": 1,
